--- a/demo/repository-data/application/src/main/resources/hcm-config/configuration/translations/templates.yaml
+++ b/demo/repository-data/application/src/main/resources/hcm-config/configuration/translations/templates.yaml
@@ -1,6 +1,7 @@
 definitions:
   config:
     /hippo:configuration/hippo:translations/hippo:templates/de:
+      jcr:primaryType: hipposys:resourcebundle
       new-resource-bundle: Neues Resource-Bundle
       new-untranslated-folder: Neuer nicht übersetzter Ordner
       new-events-folder: Neuer Events-Ordner
@@ -8,6 +9,7 @@ definitions:
       new-news-document: Neue News
       new-news-folder: Neuer News-Ordner
     /hippo:configuration/hippo:translations/hippo:templates/en:
+      jcr:primaryType: hipposys:resourcebundle
       new-resource-bundle: new resource bundle
       new-untranslated-folder: new untranslated folder
       new-events-folder: new events folder
@@ -15,6 +17,7 @@ definitions:
       new-news-document: new news item
       new-news-folder: new news item folder
     /hippo:configuration/hippo:translations/hippo:templates/fr:
+      jcr:primaryType: hipposys:resourcebundle
       new-resource-bundle: nouveau resource bundle
       new-untranslated-folder: nouveau dossier non traduit
       new-events-folder: nouveau dossier événements
@@ -22,6 +25,7 @@ definitions:
       new-news-document: nouveau message d'info
       new-news-folder: nouveau dossier messages d'info
     /hippo:configuration/hippo:translations/hippo:templates/nl:
+      jcr:primaryType: hipposys:resourcebundle
       new-resource-bundle: nieuwe resource bundle
       new-untranslated-folder: nieuwe onvertaalde map
       new-events-folder: nieuwe evenementenmap
